projects/nanousd-labs/nanousd/tests/usda/invalid/uint_negative.usda
#usda 1.0

def Scope "T"
{
    uint negative = -1
}
